--- a/styles/Project.module.css
+++ b/styles/Project.module.css
@@ -3,10 +3,127 @@
 }
 
 .container {
-    border: solid yellow;
+    /* border: solid yellow; */
     height: 40vh;
 }
 
 .alink {
     text-decoration: underline;
+    z-index: 1 !important;
+    padding: 1rem;
+    /* margin: 2rem !important; */
+    display: inline-block;
+}
+
+.flipCard {
+    background-color: transparent;
+    width: 600px;
+    height: 600px;
+    perspective: 1000px;
+
+}
+
+.flipCardInner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 1s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+
+}
+
+.flipCard:hover .flipCardInner {
+    transform: rotateY(180deg);
+}
+
+.flipCardFront,
+.flipCardBack {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.flipCardFront {
+    /* background-color: #bbb; */
+    color: black;
+}
+
+.flipCardBack {
+    padding: 0 4rem;
+    background-color: #025B18;
+    color: white;
+    transform: rotateY(180deg);
+    /* display: inline-flex; */
+}
+
+/* .flipCardBack a {
+    border: solid orange;
+    display: inline-flex;
+} */
+
+.html5 {
+    color: orange;
+    width: 5rem;
+    height: 5rem;
+    padding: 1rem;
+}
+
+.css3 {
+    color: #77bfe3;
+    width: 5rem;
+    height: 5rem;
+    padding: 1rem;
+}
+
+
+.js {
+    color: yellow;
+    width: 5rem;
+    height: 5rem;
+    padding: 1rem;
+}
+
+.postgres {
+    color: #138ccb;
+    width: 5rem;
+    height: 5rem;
+    padding: 1rem;
+
+}
+
+.sqlze {
+    color: #138ccb;
+    width: 5rem;
+    height: 5rem;
+    padding: 1rem;
+}
+
+.react {
+    color: #00a2ff;
+    width: 5rem;
+    height: 5rem;
+    padding: 1rem;
+
+}
+
+.express {
+    width: 5rem;
+    height: 5rem;
+    padding: 1rem;
+    color: black;
+}
+
+.size {
+    width: 5rem;
+    height: 5rem;
+    padding: 1rem;
+    color: chartreuse;
 }
