--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,7 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  border: solid yellow;
 }
 
 
@@ -19,7 +20,12 @@ body {
   color: chartreuse;
 }
 
+button:hover {
+  cursor: pointer;
+}
+
 * {
+  scroll-behavior: smooth !important;
   box-sizing: border-box;
   /* color: chartreuse; */
   font-family: 'Press Start 2P';
@@ -42,7 +48,9 @@ body {
 .navbar>li {
   list-style-type: none;
   display: inline-flex;
-  padding: 0 1rem;
+  padding: 0 1.5rem;
+  border-left: solid white;
+  border-right: solid white;
 }
 
 .navbar {
@@ -58,7 +66,7 @@ body {
   /* padding-top: 0.5rem;
   padding-bottom: 0.5rem; */
   padding: 0.5rem 10rem;
-  background-color: #333333;
+  background-color: #686868;
   font-size: 1.5rem;
 }
 
@@ -75,14 +83,24 @@ body {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  /* width: 100%; */
   max-width: 70vw;
-  border: solid white;
+  border-top: solid white;
+  border-bottom: solid white;
+  gap: 20px;
   margin: 0 auto;
-  /* margin-top: 5rem; */
+}
+
+.row1 {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  max-width: 70vw;
+  gap: 20px;
+  margin: 0 auto;
 }
 
 .column {
+  flex-wrap: wrap;
   display: flex;
   flex-direction: column;
   flex-basis: 100%;
